[package]
name = "rusted-arena"
version = "0.3.0"
authors = ["Orchaldir <orchaldir@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mockall = "0.7.0"
rand = "0.7.3"
rusted_tiles = { path = "../rusted_tiles" }